# aone_webrtc_stt

./: README.md
aone_simple_signaling_server/: README.md  client.html  package-lock.json  package.json  tsconfig.json
aone_simple_signaling_server/src/: main.ts  peer.ts  rtcnode.ts  signaling_server.ts  websocket_server.ts
aone_simple_signaling_server/src/types/: signaling_msg_type.ts
aone_simple_stt_server/: aone_simple_stt_server.py  download_base_model.py  download_medium_model.py  download_small_model.py  download_tiny_model.py  output_1.pcm
rtc_server_node/: .gitignore  .gn  BUILD.gn
rtc_server_node/RTCServerNode/: BUILD.gn  rtc_server_node.gni
rtc_server_node/RTCServerNode/rtc_peer/: BUILD.gn  RTCPeer.cc  RTCPeer.h  RTCPeerFactory.cc  RTCPeerFactory.h  RTCPeerInterface.h  RTCPeerListener.h
rtc_server_node/RTCServerNode/rtc_server_node/: BUILD.gn  RTCIceServerInfo.h  RTCServerNode.cc  RTCServerNode.h  RTCServerNodeListener.h  RTCSignalingNodeSession.cc  RTCSignalingNodeSession.h  RTCSignalingNodeSessionListener.h
rtc_server_node/RTCServerNode/rtc_server_node_controller/: BUILD.gn  RTCServerNodeController.cc  RTCServerNodeController.h
rtc_server_node/RTCServerNode/rtc_voice_activity/: BUILD.gn  RTCLegacyVad.cc  RTCLegacyVad.h  RTCRNNoiseVad.cc  RTCRNNoiseVad.h  RTCVadInterface.cc  RTCVadInterface.h
rtc_server_node/RTCServerNode/rtc_zmq_client/: BUILD.gn  RTCVADZmqClient.cc  RTCVADZmqClient.h
rtc_server_node/RTCServerNode/signaling_session/: BUILD.gn  RTCWebSocketClient.cc  RTCWebSocketClient.h  RTCWebSocketClientListener.h
rtc_server_node/RTCServerNode/utils/: AMessageWaitImpl.cc  AMessageWaitImpl.h  BUILD.gn  RTCUtils.cc  RTCUtils.h
rtc_server_node/RTCServerNodeExec/: BUILD.gn  RTCServerNodeExec.cc  rtc_server_node_exec.gni
rtc_server_node/RTCVoiceSdk/: BUILD.gn
rtc_server_node/RTCVoiceSdk/include/: RTCAOneLegacyVad.h  RTCAOneResampler.h  RTCAOneSdk.h  RTCAOneVoiceClient.h  RTCAOneVoiceClientListener.h
stt_client_app/: build.gradle  gradle.properties  settings.gradle
stt_client_app/app/: build.gradle
stt_client_app/app/src/main/: AndroidManifest.xml
stt_client_app/app/src/main/java/com/example/llm_client_app/: MainActivity.java
stt_client_app/app/src/main/java/com/example/llm_client_app/signaling_transport/: SignalingTransportInterface.java  SignalingTransportListener.java  SignalingTransportSession.java
stt_client_app/app/src/main/res/layout/: activity_main.xml
stt_client_app/app/src/main/res/values/: strings.xml  themes.xml
stt_client_app/app/src/main/res/values-night/: themes.xml
stt_client_app/gradle/wrapper/: gradle-wrapper.properties
