# Copyright (c) 2024 The AONE SFU project authors.

rtc_server_node_root = get_path_info(".", "abspath")
rtc_server_node_configs = [ rtc_server_node_root + ":RTCServerNodeConfig" ]
rtc_server_node_link_configs = [ rtc_server_node_root + ":RTCServerNodeLinkConfig" ]
rtc_server_node_static_link_configs = [ rtc_server_node_root + ":RTCServerNodeStaticLinkConfig" ]

set_defaults("rtc_server_node_source_set") {
    configs = rtc_server_node_configs
    configs += rtc_server_node_static_link_configs
}

set_defaults("rtc_server_node_shared_library") {
    configs = rtc_server_node_link_configs    
}

template("rtc_server_node_source_set") {
  source_set(target_name) {
    forward_variables_from(invoker,
                           "*",
                           [
                            "configs", 
                           ])
    if (defined(invoker.configs)) {
      configs += invoker.configs
    }
  }    
}

template("rtc_server_node_shared_library") {
  shared_library(target_name) {
    forward_variables_from(invoker,
                           "*",
                           [
                             "configs",
                           ])
    if (defined(invoker.configs)) {
      configs += invoker.configs
    }
  }    
}